[project]
name = "score-sde"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "diffusers>=0.27.0",
    "transformers>=4.40.0",
    "torchmetrics[image]>=1.4.0",
    "accelerate>=0.30.0",
    "modal>=0.62.0",
    "tqdm>=4.66.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.360",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score_sde"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
